--- a/ref.bib
+++ b/ref.bib
@@ -146,6 +146,17 @@
   publisher={Elsevier}
 }
 
+@article{hatfield2013,
+  title={Stability and competitive equilibrium in trading networks},
+  author={Hatfield, John William and Kominers, Scott Duke and Nichifor, Alexandru and Ostrovsky, Michael and Westkamp, Alexander},
+  journal={Journal of Political Economy},
+  volume={121},
+  number={5},
+  pages={966--1005},
+  year={2013},
+  publisher={JSTOR}
+}
+
 @article{headey2011,
   title={Rethinking the global food crisis: The role of trade shocks},
   author={Headey, Derek},
